--- a/dev/scss/projects.scss
+++ b/dev/scss/projects.scss
@@ -59,7 +59,7 @@ $card-info-side-spacing: 0.5rem;
 }
 
 .card-heading{
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: bold;
 
     padding: 0.6rem $card-info-side-spacing 0;
